# simple-distributed-system

./: CMakeLists.txt  README.md  database-node.cpp  demo.cpp  requestor-node.cpp  server-node.cpp
proto/: CMakeLists.txt  person.proto
